# taskPlayer

./: CMakeLists.txt  README.md  main.cpp  trajPlayer.cpp  trajPlayer.h
app/: taskPlayer.ini
app/example_trajectories/: test0.record  test1.record  test2.record  test3.record  test4.record  test6.record  waving1.record
